# Railway-Reservation-Managment-System

./: .gitignore  CMakeLists.txt  README.md  \  install.sh
.cache/clangd/index/: crypto.cpp.8E9FBBA50E03ECC3.idx  crypto.h.D3BF0E40F1E01928.idx
build2/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
customer_frontend/: .gitignore  pubspec.yaml
customer_frontend/android/app/: build.gradle  build.gradle.kts
customer_frontend/android/app/src/main/: AndroidManifest.xml
customer_frontend/ios/Runner.xcodeproj/: project.pbxproj
customer_frontend/lib/: main.dart
customer_frontend/lib/data/model/: reservation.dart  station.dart  ticket.dart  train.dart  user.dart
customer_frontend/lib/data/repositories/: authentication_repository.dart  customer_repository.dart  reservation_repository.dart
customer_frontend/lib/data/services/: api_client.dart  authentication_service.dart  customer_service.dart  reservation_service.dart
customer_frontend/lib/domain/models/: email.dart
customer_frontend/lib/routing/: router.dart
customer_frontend/lib/ui/auth/bloc/: authentication_bloc.dart  authentication_event.dart
customer_frontend/lib/ui/auth/widgets/: login_screen.dart  register_screen.dart  reset_password_screen.dart
customer_frontend/lib/ui/core/themes/: app_colors.dart
customer_frontend/lib/ui/home/widgets/: home_screen.dart
customer_frontend/lib/ui/login/bloc/: login_bloc.dart  login_state.dart
customer_frontend/lib/ui/login/widgets/: login_screen.dart
customer_frontend/lib/ui/profile/widgets/: profile_screen.dart
customer_frontend/lib/ui/register/bloc/: register_bloc.dart  register_event.dart  register_state.dart
customer_frontend/lib/ui/register/widgets/: register_screen.dart
customer_frontend/lib/ui/reservations/bloc/: reservation_bloc.dart  reservation_event.dart  reservation_state.dart
customer_frontend/lib/ui/reservations/widgets/: reservation_item.dart  reservation_item_details.dart  reservation_list.dart  reservation_screen.dart
customer_frontend/linux/: CMakeLists.txt
customer_frontend/linux/runner/: my_application.cc
customer_frontend/macos/Runner.xcodeproj/: project.pbxproj
customer_frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
customer_frontend/macos/Runner/Configs/: AppInfo.xcconfig
customer_frontend/test/: widget_test.dart
customer_frontend/web/: index.html
customer_frontend/windows/runner/: Runner.rc
employee_frontend/: .gitignore  README.md  pubspec.yaml
employee_frontend/android/app/: build.gradle
employee_frontend/android/app/src/main/: AndroidManifest.xml
employee_frontend/ios/Runner/: Info.plist
employee_frontend/ios/Runner.xcodeproj/: project.pbxproj
employee_frontend/lib/: main.dart
employee_frontend/lib/data/model/: appraisal.dart  citation.dart  task.dart  user.dart
employee_frontend/lib/data/repositories/: authentication_repository.dart  employee_repository.dart
employee_frontend/lib/data/services/: api_client.dart  authentication_service.dart  employee_service.dart
employee_frontend/lib/domain/models/: password.dart
employee_frontend/lib/routing/: router.dart
employee_frontend/lib/ui/appraisals/widgets/: appraisals_screen.dart
employee_frontend/lib/ui/assigned_trains/widgets/: assigned_trains_list.dart  assigned_trains_list_item.dart  assigned_trains_screen.dart  from_to_information_box.dart
employee_frontend/lib/ui/auth/bloc/: authentication_bloc.dart  authentication_state.dart
employee_frontend/lib/ui/auth/widgets/: login_screen.dart
employee_frontend/lib/ui/citations/widgets/: citations_screen.dart
employee_frontend/lib/ui/core/shared_widgets/: circle_button.dart  input_text_field.dart  mission_item.dart  mission_item_details.dart  missions_list.dart
employee_frontend/lib/ui/core/ui/: circle_button.dart  (+5 more)
employee_frontend/lib/utility/: hashing_utility.dart
employee_frontend/test/: widget_test.dart
include/: crypto.h  database_common.h  database_connector.h  globalVariables.h  global_variables.h  middleware.h  misc_functions.h  permissions.h  tokens.h
include/apis/: authorization.h  employee.h  reservation.h
include/systemd/: RRMS_authorization.service
manager_frontend/: .gitignore  README.md  pubspec.yaml
manager_frontend/android/app/: build.gradle.kts
manager_frontend/ios/Runner/: Info.plist
manager_frontend/ios/Runner.xcodeproj/: project.pbxproj
manager_frontend/lib/: main.dart
manager_frontend/lib/data/model/: appraisal.dart  citation.dart  department.dart  employee.dart  job.dart  manager.dart  manager_api.dart  permission.dart  route.dart  station.dart  subpermissionsData.dart  task.dart  train.dart
manager_frontend/lib/data/repositories/: authentication_repository.dart  authentication_repositroy.dart  employee_repository.dart  reservation_repository.dart
manager_frontend/lib/data/services/: api_client.dart  authentication_service.dart  employee_service.dart  reservation_service.dart
manager_frontend/lib/domain/models/: manager.dart
manager_frontend/lib/routing/: router.dart
manager_frontend/lib/ui/home/: admin_navigation_drawer.dart
manager_frontend/lib/utility/: hashing_utility.dart
manager_frontend/linux/: CMakeLists.txt
manager_frontend/linux/runner/: my_application.cc
manager_frontend/macos/Runner.xcodeproj/: project.pbxproj
manager_frontend/macos/Runner/Configs/: AppInfo.xcconfig
manager_frontend/test/: widget_test.dart
manager_frontend/web/: index.html  manifest.json
manager_frontend/windows/: CMakeLists.txt
manager_frontend/windows/runner/: Runner.rc  main.cpp
src/: crypto.cpp  database_common.cpp  database_connector.cpp  middleware.cpp  misc_functions.cpp  tokens.cpp
src/authorization/: authorization.cpp  authorizationDELETE.cpp  authorizationGET.cpp  authorizationPOST.cpp
src/employee/: employee.cpp  employeeDELETE.cpp  employeeGET.cpp  employeePATCH.cpp  employeePOST.cpp
src/reservation/: reservation.cpp  reservationDELETE.cpp  reservationGET.cpp  reservationPOST.cpp
src/systemd/: rrms-authorization.service  rrms-employee.service  rrms-reservation.service
(+114 files in other folders)
